# Czechitas_projects

hw_01/: homework.py  prochazkova_iva_hw01.py
hw_02/: prochazkova_iva_hw02.py
obce_vybavenost/: .gitignore  main.py  pyproject.toml
obce_vybavenost/data/clean/: alzaboxes_cleaned.csv  alzaboxes_enriched.csv  posta_cleaned.csv  posta_enriched.csv  zasilkovna_cleaned.csv  zasilkovna_enriched.csv
obce_vybavenost/data/raw/: alzaboxes_cz.xlsx  posta.csv  zasilkovna_data.xlsx
obce_vybavenost/data_cleaning/: address_cleaner.py  alzabox_cleaner.py  alzabox_enricher.py  posta_cleaner.py  posta_enricher.py  ruian_client.py  zasilkovna_cleaner.py  zasilkovna_enricher.py
