[project]
name = "obce-vybavenost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chardet>=5.2.0",
    "duckdb>=1.2.2",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]
